refactor: P2 代码现代化与架构优化
Java 21 现代化（Q5）：
- refactor: 7处字符串拼接改为 text block（含 @SystemMessage）
- refactor: 5处 Collectors.toList() 改为 .toList()

配置整合（Q8）：
- refactor: @Value 字段注入整合到 @ConfigurationProperties
- 新增 AppProperties.VertexAi 和 AppProperties.PgVector 内部类
- 消除 VertexAiConfig(3) + SemanticCacheService(5) + EmbeddingStoreProvider(5) 共13个 @Value
- 保持 PG_HOST 等环境变量兼容性

代码去重（Q2）：
- refactor: SemanticCacheService 委托 EmbeddingStoreProvider
- EmbeddingStoreProvider 新增 createEmbeddingStore 工厂方法
- 消除约80行重复代码（OpenAiEmbeddingModel 配置、PG 构建、熔断缓存逻辑）
- 保持 semantic_cache 与 engineering_memory 向量空间隔离

AgentService 拆分（Q1）：
- refactor: 删除2个死依赖（modelGateway、ragMemoryService）
- refactor: 抽取 ModelSourceResolver（模型源解析去重）
- refactor: 抽取 SemanticCacheWriter（缓存写入去重）
- refactor: 抽取 DiagnosticsBuilder（诊断构造去重）
- 依赖数 17→12，消除4处重复代码

LangChain4j 升级（Q7）：
- chore: agent-router/generation/reflection 升级到 1.0.0-beta5
- ChatLanguageModel→ChatModel, generate→chat, StreamingResponseHandler→StreamingChatResponseHandler
- backend 暂缓（FlexAgent 1.2.0 不兼容 1.x，需 FlexAgent 升级后跟进）